--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,13 +22,9 @@
                     <a class="nav-link" href="{{ path('about') }}">About</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('posts') }}">Posts</a>
+                    <a class="nav-link" href="{{ path('post.index') }}">Posts</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
     {# container #}
