--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="row">
     <div class="col-md-12">
-        <h1>Posts page - {{ post }}</h1>
+        <h1>Post was created successfully</h1>
     </div>
 </div>
 {% endblock %}
