--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -1,8 +1,4 @@
 {% extends "base.html.twig" %}
 {% block body %}
-<div class="row">
-    <div class="col-md-12">
-        <h1>Post was created successfully</h1>
-    </div>
-</div>
+    {{ form(form) }}
 {% endblock %}
