--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -3,6 +3,13 @@
 {% block title %}Hello PostController!{% endblock %}
 
 {% block body %}
+
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success">
+        {{ message }}
+    </div>
+{% endfor %}
+
 <h3>List of all posts</h3>
 <a href="{{ path('post.create') }}" >
     Add New
